--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -86,6 +86,9 @@ driver:
     image:
       # if you want to use topology feature (multiple PVCs per pod) you should use v1.2.2
       tag: v3.0.0
+    envVars:
+      - name: TIMEOUT_DURATION
+        value: 30s
     resources:
       limits:
         cpu:
