--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -86,6 +86,12 @@ driver:
     image:
       # if you want to use topology feature (multiple PVCs per pod) you should use v1.2.2
       tag: v3.0.0
+    args:
+      # https://github.com/kubernetes-csi/external-provisioner#command-line-options
+      timeout: 30s
+      retryIntervalStart: 1s
+      retryIntervalMax: 5m
+      workerThreads: 100
     resources:
       limits:
         cpu:
