feature: support podsecuritypolicy enabling

--- a/charts/csi-baremetal-operator/values.yaml
+++ b/charts/csi-baremetal-operator/values.yaml
@@ -16,3 +16,8 @@ resources:
   requests:
     cpu: 100m
     memory: 20Mi
+
+securityContext:
+  enable: true
+  runAsNonRoot: true
+  runAsUser: 1000
