--- a/charts/csi-baremetal-operator/templates/manager.yaml
+++ b/charts/csi-baremetal-operator/templates/manager.yaml
@@ -46,6 +46,11 @@ spec:
         - mountPath: /crash-dump
           name: crash-dump 
       terminationGracePeriodSeconds: 10
+      {{- if .Values.global.securityContext.enable }}
+        securityContext:
+          runAsNonRoot: {{ .Values.global.securityContext.runAsNonRoot }}
+          runAsUser: {{ .Values.global.securityContext.runAsUser }}
+      {{- end }}
       volumes:  
       - name: crash-dump
         emptyDir: {}
