--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -100,12 +100,16 @@ spec:
                         description: SecurityContext represents security context
                         properties:
                           enable:
+                            default: false
                             type: boolean
                           privileged:
+                            default: false
                             type: boolean
                           runAsNonRoot:
+                            default: true
                             type: boolean
                           runAsUser:
+                            default: 1000
                             format: int64
                             type: integer
                         required:
@@ -315,12 +319,16 @@ spec:
                         description: SecurityContext represents security context
                         properties:
                           enable:
+                            default: false
                             type: boolean
                           privileged:
+                            default: false
                             type: boolean
                           runAsNonRoot:
+                            default: true
                             type: boolean
                           runAsUser:
+                            default: 1000
                             format: int64
                             type: integer
                         required:
@@ -447,12 +455,16 @@ spec:
                     description: SecurityContext represents security context
                     properties:
                       enable:
+                        default: false
                         type: boolean
                       privileged:
+                        default: false
                         type: boolean
                       runAsNonRoot:
+                        default: true
                         type: boolean
                       runAsUser:
+                        default: 1000
                         format: int64
                         type: integer
                     required:
@@ -624,12 +636,16 @@ spec:
                     description: SecurityContext represents security context
                     properties:
                       enable:
+                        default: false
                         type: boolean
                       privileged:
+                        default: false
                         type: boolean
                       runAsNonRoot:
+                        default: true
                         type: boolean
                       runAsUser:
+                        default: 1000
                         format: int64
                         type: integer
                     required:
