--- a/.github/.codecov.yaml
+++ b/.github/.codecov.yaml
@@ -3,3 +3,7 @@ coverage:
     project:
       default:
         threshold: 1%
+# TODO: improve code coverage - https://github.com/dell/csi-baremetal/issues/658
+ignore:
+  - "pkg/node/node_daemonset.go"
+  - "pkg/patcher/scheduler_patcher_vanilla.go"
