--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -66,7 +66,7 @@ driver:
       enable: true
       privileged: true
     podSecurityPolicy:
-      enable: true
+      enable: false
       resourceName: privileged
 
   drivemgr:
@@ -172,7 +172,7 @@ scheduler:
     enable: true
     privileged: true
   podSecurityPolicy:
-    enable: true
+    enable: false
     resourceName: privileged
   image:
     tag:
