feature: small fix for old deployment
Signed-off-by: Nikita Mikhnenko <nikita_mikhnenko@dell.com>

--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -63,11 +63,11 @@ driver:
         cpu:
         memory:
     securityContext:
-      enable: true
-      privileged: true
+      enable:
+      privileged:
     podSecurityPolicy:
-      enable: false
-      resourceName: privileged
+      enable:
+      resourceName:
 
   drivemgr:
     type: basemgr
@@ -169,11 +169,11 @@ scheduler:
   enable: true
   serviceAccount: csi-baremetal-extender-sa
   securityContext:
-    enable: true
-    privileged: true
+    enable:
+    privileged:
   podSecurityPolicy:
-    enable: false
-    resourceName: privileged
+    enable:
+    resourceName:
   image:
     tag:
   resources:
