feature: small fixsed for openshift
Signed-off-by: Nikita Mikhnenko <nikita_mikhnenko@dell.com>

--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -32,6 +32,12 @@ spec:
       log:
         format: {{ .Values.driver.log.format }}
         level: {{ .Values.driver.log.level }}
+      {{- if .Values.driver.controller.securityContext.enable }}
+      securityContext:
+        enable: {{ .Values.driver.controller.securityContext.enable }}
+        runAsNonRoot: {{ .Values.driver.controller.securityContext.runAsNonRoot }}
+        runAsUser: {{ .Values.driver.controller.securityContext.runAsUser }}
+      {{- end }}
       sidecars:
         livenessprobe:
           image:
