--- a/charts/csi-baremetal-deployment/templates/csidriver/csidriver.yaml
+++ b/charts/csi-baremetal-deployment/templates/csidriver/csidriver.yaml
@@ -2,6 +2,8 @@ apiVersion: storage.k8s.io/v1
 kind: CSIDriver
 metadata:
   name: csi-baremetal
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   attachRequired: false
   # pass pod info to NodePublishRequest
